<resources>
    <string name="app_name">Мой эксперт</string>
    <string name="notification_channel_name">Notification channel name</string>
    <string name="notification_channel_description">Notification channel description</string>
    <string name="caption_for_expert_selection">Поиск эксперта</string>
    <string name="new_appointment">Новая запись</string>
    <string name="caption_list_of_active_appointments">Список активных записей</string>
    <string name="confirm_selection_button">Подтвердить выбор</string>
    <string name="recommendations">Рекомендации</string>
    <string name="caption_for_best_expert">Лучшие эксперты</string>
    <string name="expert_name_example">Евтушенко Максим Евгеньевич</string>
    <string name="cancel_appointment">Отменить запись</string>
    <string name="no_appointments">Вы еще не записаны ни к одному эксперту</string>
    <string name="item_search_expert">Найти эксперта</string>
    <string name="expert_schedule_no_time">В ближайшее время нет записи у данного специалиста</string>

    <string name="button_expert_detailed_appointment">Записаться</string>

    <string name="fragment_search_new_appointment">Записаться к эксперту</string>
    <string name="find_expert_filters">Фильтры</string>
    <string name="menu_find_expert">Find Expert</string>
    <string name="menu_settings">Settings</string>
    <string name="title_fragment_active_appointments">Ваше расписание</string>
    <string name="title_find_expert">Поиск эксперта</string>

    <string name="item_expert_holder_phone_number">Телефон:</string>
    <string name="fragment_find_expert_search_view_hint">Фамилия или вид деятельности эксперта</string>
    <string name="preferences_enable_notifications_switch_key">enable notifications</string>
    <string name="preferences_title_notification">Уведомления</string>
    <string name="preferences_enable_notifications_title">Включить</string>
    <string name="preferences_list_key">notification_frequency</string>
    <string name="fragment_account_save_button">Сохранить</string>
    <string name="fragment_account_log_out">Выйти из аккаунта</string>
    <string name="fragment_account_notifications">Уведомления</string>
    <string name="fragment_account_email_hint">Email</string>
    <string name="fragment_account_phone_hint">Телефон</string>
    <string name="fragment_account_date_hint">Дата рождения</string>
    <string name="fragment_account_last_name">Фамилия</string>
    <string name="fragment_account_name">Имя</string>
    <string name="fragment_account_second_name">Отчество</string>
    <string name="fragment_detailed_appointment_chip_text">Включить уведомление</string>
    <string name="fragment_account_change_button">Изменить</string>
    <string name="fragment_detailed_information_expert_more_inf">Узнать больше</string>
    <string name="fragment_detailed_information_inf">Скрыть</string>
    <string name="detailed_fragment_change_button">Изменить</string>
    <string name="detailed_fragment_dismiss">Отмена</string>
    <string name="dialog_fragment_change_email_title">Изменение email</string>
    <string name="dialog_fragment_change_phone_number_title">Изменение номера телефона</string>
    <string name="dialog_fragment_change_expert_gender">Изменения пола</string>
    <string name="dialog_fragment_change_full_name_title">Изменение ФИО</string>
    <string name="toast_message">Включите интернет соединение для корректной работы приложения</string>
    <string name="text_vew_rating_bar">Оцените услугу</string>
    <string name="fragment_detailed_appointment_add_notification">Добавить напоминание</string>
    <string name="fragment_detailed_appointment_delete_notification">Удалить напоминание</string>
    <string name="client_information_changed">Ваши данные успешно изменены</string>
    <string name="expert_schedule_new_appointment">Новая запись успешно добавлена</string>
    <string name="detailed_fragment_title">Описание записи</string>
    <string name="title_home">Расписание</string>
    <string name="title_expert_search">Поиск эксперта</string>
    <string name="title_account_settings">Настройки аккаунта</string>
    <string name="fragment_detailed_expert_number">Телефон:</string>
    <string name="simple_activity_transition">proverhs</string>

    <string name="expert_detailed_appointment_service_name">Название услуги</string>
    <string name="expert_detailed_appointment_time">Время начала предоставления услуги</string>
    <string name="expert_detailed_appointment_date">Дата</string>
    <string name="expert_detailed_appointment_location">Локация</string>
    <string name="expert_detailed_appointment_duration">Продолжительность услуги</string>
    <string name="expert_detailed_appointment_cost">Стоимость</string>
    <string name="expert_detailed_appointment_additional_information">Дополнитльная информация</string>

    <string name="detailed_expert_email">Почта:</string>
    <string name="detailed_expert_age">Возраст:</string>
    <string name="detailed_expert_work_experience">Опыт работы:</string>
    <string name="detailed_expert_phone_number">Телефон:</string>
    <string name="detailed_expert_contact_using_apps">Связаться с помощью:</string>

    <string name="detailed_appointment_extra_information">Дополнительная информация:</string>
    <string name="detailed_appointment_service_name">Наименование услуги:</string>
    <string name="detailed_appointment_duration">Продолжительность:</string>
    <string name="detailed_appointment_date">Дата:</string>
    <string name="detailed_appointment_location">Место:</string>
    <string name="detailed_appointment_time">Время:</string>
    <string name="detailed_appointment_cost">Стоимость</string>

    <string name="required_write_external_permission">Требуется разрешение на запись</string>
    <string name="no_write_external_storage_permission">Нет разрешения на запись, фото не сохранено</string>
    <string name="need_to_choose_expert">Выберите эксперта</string>
    <string name="something_went_wrong">Что-то пошла не так, попробуйте еще раз выбрать эксперта</string>
    <string name="cancel_active_record">Отмена записи</string>
    <string name="are_you_sure_you_want_to_cancel_recording">Вы уверены что хотите отменить запись?</string>
    <string name="positive_button">ДА</string>
    <string name="negative_button">Нет</string>
    <string name="viber_not_available_on_this_phone">Viber не установлен на телефоне</string>
    <string name="telegram_not_available_on_this_phone">Телеграмм не установлен на телефоне</string>
    <string name="telegram_name">org.telegram.messenger</string>
    <string name="viber_name">com.viber.voip</string>
    <string name="exception_item_is_not_supportend_by_adapter">The following item is not supported by adapter:</string>
    <string name="cant_load_one_appointment">Не удалось загрузить информацию о записи</string>
    <string name="successful_update">Информация успешно изменена</string>
    <string name="appointment_successful_deleted">Запись успешно удалена</string>
    <string name="login_hint_edit_text">Логин</string>
    <string name="heading_authorization">Авторизация</string>
    <string name="password_hint_field">Пароль</string>
    <string name="sign_in_button">Sign in</string>
    <string name="sing_up_button">Sing up</string>

    <string-array name="professions">
        <item>Тренер по фигурному катанию</item>
        <item>Инструктор по зумбе</item>
        <item>Инструктор по йоге</item>
        <item>Интрусктор по вождению</item>
    </string-array>

    <string-array name="gender">
        <item>Мужской</item>
        <item>Женский</item>
    </string-array>
    <plurals name="declination_of_years">
        <item quantity="one">%d год</item>
        <item quantity="two">%d года</item>
        <item quantity="few">%d года</item>
        <item quantity="many">%d лет</item>
    </plurals>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="create_account">No account yet? Create one</string>
    <string name="select_client_button">Клиент</string>
    <string name="select_Expert_button">Эксперт</string>
    <string name="create_new_account">Создать аккаунт</string>
    <string name="passwordError">Пароли должны совпадать</string>
    <string name="create_expert_profession">Вид деятельности</string>
    <string name="create_expert_work_experience">Опыт работы</string>
    <string name="empty_expert_recycler">У вас нет активных записей</string>
    <string name="expert_appointment_name">Наименование услуги</string>
    <string name="expert_appointment_location">Место проведения</string>
    <string name="expert_appointment_cost">Стоимость</string>
    <string name="expert_appointment_date">Дата</string>
    <string name="expert_appointment_time">Время</string>
    <string name="expert_appointment_duration">Продолжительность</string>
    <string name="expert_add_appointment_button">Добавить</string>
    <string name="expert_detailed_appointment_client">Записанный клиент</string>
    <string name="expert_detailed_appointment_delete">Удалить запись</string>
    <string name="menu_delete">Delete</string>
</resources>
