<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/heading_authorization"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/heading_authorization"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/login_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"

        android:hint="@string/login_hint_edit_text"
        android:inputType="textEmailAddress"
        android:padding="@dimen/padding_medium"
        app:layout_constraintEnd_toEndOf="@+id/heading_authorization"
        app:layout_constraintStart_toStartOf="@+id/heading_authorization"
        app:layout_constraintTop_toBottomOf="@+id/heading_authorization" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/password_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"

        android:hint="@string/password_hint_field"
        android:inputType="textPassword"
        android:padding="@dimen/padding_medium"
        app:layout_constraintEnd_toEndOf="@+id/login_field"
        app:layout_constraintStart_toStartOf="@+id/login_field"
        app:layout_constraintTop_toBottomOf="@+id/login_field" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_button"
        app:layout_constraintStart_toStartOf="@+id/password_field"
        app:layout_constraintTop_toBottomOf="@+id/password_field" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_up_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sing_up_button"
        app:layout_constraintBottom_toBottomOf="@+id/sign_in_button"
        app:layout_constraintStart_toEndOf="@+id/sign_in_button"
        app:layout_constraintTop_toTopOf="@+id/sign_in_button" />


</androidx.constraintlayout.widget.ConstraintLayout>