<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/logo"
        android:text="@string/app_name" />

    <androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        android:elevation="@dimen/elevation_medium"
        app:cardCornerRadius="@dimen/card_corner_radius_medium">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/select_expert"
                style="@style/MyButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_medium"
                android:text="@string/select_Expert_button" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/select_client"
                style="@style/MyButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_client_button" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>